# ultimate-fastapi-tutorial

./: README.md  alembic.ini  docker-compose.local.yml  pyproject.toml
alembic/versions/: 508cdd7bdde7_create_recipe_and_user_tables.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  recipe.py
app/core/: auth.py  config.py
app/crud/: crud_user.py
app/db/: init_db.py
app/models/: recipe.py  user.py
app/schemas/: recipe.py  user.py
backend/: Dockerfile
backend/app/: pyproject.toml  run.sh
backend/app/alembic/: env.py
backend/app/app/: initial_data.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: recipe.py
backend/app/app/core/: security.py
backend/app/app/crud/: base.py
backend/app/app/db/: base.py  base_class.py  session.py
backend/app/app/models/: user.py
backend/app/app/schemas/: recipe.py
